--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,33 @@
 version: '2'
 services:
+  mongo:
+    container_name: mongo
+    image: mongo
+    restart: always
+    ports: 
+      - "27017:27017"  
+    volumes:  
+      - ./data/db:/data/db
+    networks:
+      - backend
+     
   web:
     build: .
     depends_on:
+      - mongo
+    links:
       - mongo
     links: 
       - mongo  
     ports:
       - "8080:8080"
+      - "3000:3000"
     volumes:
-        - ./dist:/dist
-    command: npm run build
-    
-  #   volumes:
-  #     - .:/usr/app/
-  #     - /usr/app/node_modules
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - postgres
-  #   environment:
-  #     DATABASE_URL: postgres://todoapp@postgres/todos
-  # postgres:
-  #   image: postgres:9.6.2-alpine
-  #   environment:
-  #     POSTGRES_USER: todoapp
-  #     POSTGRES_DB: todos
+        - ./:/app
+    command: npm run prod
+    restart: always
+    networks:
+      - backend  
   nginx:
     image: nginx
     volumes:
@@ -33,11 +35,6 @@ services:
         - ./dist:/usr/share/nginx/html:z
     ports:
       - "80:80"
-  mongo:
-    container_name: mongo
-    image: mongo
-    restart: always
-    ports: 
-      - "27017:27017"  
-# volumes: 
-#   public:   
+    
+networks:
+  backend:      
