--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "prod": "node index.js && npm run build"
   },
   "dependencies": {
     "express": "^4.16.3",
+    "mongoose": "^5.2.14",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
